Fixed some minor UX spacing issues on Craft CMS 3.4

--- a/src/assetbundles/seomatic/src/css/pages/settings.pcss
+++ b/src/assetbundles/seomatic/src/css/pages/settings.pcss
@@ -4,3 +4,8 @@
  * Styles for the Settings page.
  *
  */
+
+.seomatic-imageSourceSelect, .seomatic-textSourceSelect {
+    margin-bottom: .5rem;
+    margin-top: .5rem;
+}
